2022-03-24: Temp fix swagger
